prime: fix panel upper_margin

--- a/configs/mx6ull_prime_defconfig
+++ b/configs/mx6ull_prime_defconfig
@@ -35,3 +35,6 @@ CONFIG_USB_ETHER_ASIX=n
 CONFIG_USB_STORAGE=n
 CONFIG_DM_ETH=n
 CONFIG_NAND_BOOT=y
+CONFIG_CMD_BOOTEFI=y
+CONFIG_EFI_LOADER=y
+CONFIG_CFB_CONSOLE=y
