Hack: Move FrameBuffer to 0x80000000

--- a/configs/mx6ull_prime_defconfig
+++ b/configs/mx6ull_prime_defconfig
@@ -38,3 +38,6 @@ CONFIG_NAND_BOOT=y
 CONFIG_CMD_BOOTEFI=y
 CONFIG_EFI_LOADER=y
 CONFIG_CFB_CONSOLE=y
+CONFIG_CMD_BOOTM=y
+CONFIG_SPLASH_SCREEN=n
+CONFIG_VIDEO_LOGO=n
